--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                     <div class="intro">
                         <p>도전과 배움이 즐거운 신입 퍼블리셔 임채안입니다.</p>
-                        <p>웹 표준에 맞는 꼼꼼한 마크업과 CSS를 활용한 다양한 디자인 연출이 가능하며, 
+                        <p>웹 표준에 맞는 꼼꼼한 마크업과 SCSS를 활용한 다양한 디자인 연출이 가능하며, 
                         외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.
                         또한 html, css, JavaScript, jQuery 외에 작업 효율성이 높은 다양한 디자인 툴 사용이 가능합니다.
                         멈추지 않고 꾸준히 공부하여 나날이 발전하는 보습을 보여드리겠습니다.
@@ -62,8 +62,8 @@
 
                     <div class="study">
                         <p>2021.07-08 포토샵(GTQ) 그래픽디자인 수료</p>
-                        <p>2022.04 웹디자인(웹표준_HTML5_CSS3) 수료<b>(선행학습)</b></p>
-                        <p>2022.04-09 UI/UX  반응형 웹디자인&웹퍼블리셔(디자인&코딩) 양성과정<b>(수강중)</b></p>
+                        <p>2022.04 웹디자인(웹표준_HTML5_CSS3) 수료</p>
+                        <p>2022.04-09 UI/UX  반응형 웹디자인&웹퍼블리셔(디자인&코딩) 양성과정 수료</p>
                     </div>
                 </div>
                 <div class="visual">
@@ -82,7 +82,7 @@
                         </div>
                         <div class="txt">
                             <h4>CSS3</h4>
-                            <P>다양한 디자인 구현 및 반응형 웹 제작 가능</P>
+                            <P>다양한 디자인, 애니메이션 구현 및 반응형 웹 제작 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -109,7 +109,7 @@
                         </div>
                         <div class="txt">
                             <h4>Figma</h4>
-                            <P>다양한 UI/UX 디자인 작업 가능</P>
+                            <P>UI/UX 디자인 작업, 아이콘 및 이미지 추출 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -136,7 +136,7 @@
                         </div>
                         <div class="txt">
                             <h4>Zeplin</h4>
-                            <P>다양한 디자인 작업물의 구성요소 추출 가능 </P>
+                            <P>다양한 디자인 작업물의 구성요소 추출 가능</P>
                         </div>
                     </div>
                 </div>
