--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2><b>퍼블리셔</b> <b>임채안</b>입니다</h2>
                     <div class="m-contact">
                         <p>CONTACT</p>
-                        <p>limchaean2@naver.com</p>
+                        <p>limchaean2@gmail.com</p>
                         <p>010 5159 1061</p>
                     </div>
                 </div>
@@ -48,16 +48,15 @@
 
                     <div class="name">
                         <p>LIM CHAE AN</p>
-                        <P>1997 07 08 / Gwanak-gu, Seoul</P>
+                        <P>1997 07 08 / Gwangjin-gu, Seoul</P>
                     </div>
 
                     <div class="intro">
-                        <p>도전과 배움이 즐거운 신입 퍼블리셔 임채안입니다.</p>
+                        <p>1px도 놓치지 않은 디테일 장인 퍼블리셔 임채안입니다.</p>
                         <p>웹 표준에 맞는 꼼꼼한 마크업과 SCSS를 활용한 다양한 디자인 연출이 가능하며, 
-                        외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.
-                        또한 html, css, JavaScript, jQuery 외에 작업 효율성이 높은 다양한 디자인 툴 사용이 가능합니다.
-                        멈추지 않고 꾸준히 공부하여 나날이 발전하는 보습을 보여드리겠습니다.
-                        앞으로 가득 채워질 저의 프로젝트들을 기대해주세요!</p>
+                        외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.</p>
+                        <p>또한 html, css, JavaScript, jQuery 외에 작업 효율성이 높은 다양한 디자인 툴 사용이 가능합니다.</p>
+                        <p>앞으로 가득 채워질 저의 프로젝트들을 기대해주세요!</p>
                     </div>
 
                     <div class="study">
@@ -195,7 +194,7 @@
                     </h2>
                     <div class="c-contact">
                         <p>CONTACT</p>
-                        <p>limchaean2@naver.com</p>
+                        <p>limchaean2@gmail.com</p>
                         <p>010 5159 1061</p>
                     </div>
                 </div>
