--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 
             <section class="about">
                 <div class="a-txt">
-                    <h2>임채안은 <b>어떤 능력을</b> <br>가지고 있을까?</h2>
+                    <h2><b>어떤 능력을</b> 갖고 있을까?</h2>
 
                     <div class="name">
                         <p>LIM CHAE AN</p>
-                        <P>1997 07 08 / Gwangjin-gu, Seoul</P>
+                        <P>19970708 / Gwangjin-gu, Seoul</P>
                     </div>
 
                     <div class="intro">
-                        <p>1px도 놓치지 않은 디테일 장인 퍼블리셔 임채안입니다.</p>
-                        <p>웹 표준에 맞는 꼼꼼한 마크업과 SCSS를 활용한 다양한 디자인 연출이 가능하며, 
-                        외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.</p>
+                        <p>1px도 놓치지 않은 꼼꼼한 퍼블리셔 임채안입니다.</p>
+                        <p>웹 표준에 맞는 마크업과 SCSS를 활용한 다양한 디자인 연출이 가능하며,</p>
+                        <p>외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.</p>
                         <p>또한 html, css, JavaScript, jQuery 외에 작업 효율성이 높은 다양한 디자인 툴 사용이 가능합니다.</p>
                         <p>앞으로 가득 채워질 저의 프로젝트들을 기대해주세요!</p>
                     </div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="txt">
                             <h4>HTML5</h4>
-                            <P>웹 표준과 웹 접근성에 준수하는 HTML 구조설계</P>
+                            <P>웹 표준과 웹 접근성에 준수하는<br>HTML 구조설계</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -81,7 +81,7 @@
                         </div>
                         <div class="txt">
                             <h4>CSS3</h4>
-                            <P>다양한 디자인, 애니메이션 구현 및 반응형 웹 제작 가능</P>
+                            <P>다양한 디자인, 애니메이션 구현 및<br>반응형 웹 제작 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -90,7 +90,7 @@
                         </div>
                         <div class="txt">
                             <h4>JavaScript & jQuery</h4>
-                            <P>기본적인 문법과 플러그인 사용 가능</P>
+                            <P>기본적인 문법과<br>플러그인 사용 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -99,7 +99,7 @@
                         </div>
                         <div class="txt">
                             <h4>GitHub</h4>
-                            <P>저장소 관리 및 공동 개발에 효율적인 브랜치 사용 가능</P>
+                            <P>저장소 관리 및<br>공동 개발에 효율적인<br>브랜치 사용 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -108,7 +108,7 @@
                         </div>
                         <div class="txt">
                             <h4>Figma</h4>
-                            <P>UI/UX 디자인 작업, 아이콘 및 이미지 추출 가능</P>
+                            <P>UI/UX 디자인 작업,<br>아이콘 및 이미지 추출 가능</P>
                         </div>
                     </div>
                     <div class="icon-wrap">
@@ -117,18 +117,18 @@
                         </div>
                         <div class="txt">
                             <h4>Adobe Photoshop</h4>
-                            <P>다양한 목업 제작, 보정 및 기본 툴 활용 가능</P>
+                            <P>다양한 목업 제작,<br>보정 및 기본 툴 활용 가능</P>
                         </div>
                     </div>
-                    <div class="icon-wrap">
+                    <!-- <div class="icon-wrap">
                         <div class="icon">
                             <img src="./LOGO/logos_illustrator.png" alt="illustrator">
                         </div>
                         <div class="txt">
                             <h4>Adobe Illustrator</h4>
-                            <P>아이콘 디자인 및 펜툴 사용 가능</P>
+                            <P>아이콘 디자인 및<br>펜툴 사용 가능</P>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="icon-wrap">
                         <div class="icon">
                             <img src="./LOGO/logos_zeplin.png" alt="zeplin">
