--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="intro">
-                        <p>1px도 놓치지 않은 꼼꼼한 퍼블리셔 임채안입니다.</p>
+                        <p>1px도 놓치지 않는 꼼꼼한 퍼블리셔 임채안입니다.</p>
                         <p>웹 표준에 맞는 마크업과 SCSS를 활용한 다양한 디자인 연출이 가능하며,</p>
                         <p>외부 스크립트를 활용한 슬라이드 및 API 기능을 사용할 수 있습니다.</p>
                         <p>또한 html, css, JavaScript, jQuery 외에 작업 효율성이 높은 다양한 디자인 툴 사용이 가능합니다.</p>
@@ -120,7 +120,7 @@
                             <P>다양한 목업 제작,<br>보정 및 기본 툴 활용 가능</P>
                         </div>
                     </div>
-                    <!-- <div class="icon-wrap">
+                    <div class="icon-wrap">
                         <div class="icon">
                             <img src="./LOGO/logos_illustrator.png" alt="illustrator">
                         </div>
@@ -128,7 +128,7 @@
                             <h4>Adobe Illustrator</h4>
                             <P>아이콘 디자인 및<br>펜툴 사용 가능</P>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="icon-wrap">
                         <div class="icon">
                             <img src="./LOGO/logos_zeplin.png" alt="zeplin">
